syntax = "proto3";

package user;

option go_package = "./pb";


service OrderService{
    rpc PostOrder(RequestOrderData) returns (PostOrderResponse);
    rpc GetRestaurantOrders(RestaurantId) returns (Orders);
    rpc GetUserOrders(UserId) returns (Orders);
    rpc GetDriverOrder(DriverId) returns (Order);
    rpc GetOrderById(OrderId) returns (Order);
}

message PostOrderResponse {
    string order_id = 1;
}

message RequestOrderData {
    uint32 user_id = 1;
    Address address = 2;
    repeated OrderItem order_items = 3;
}

message OrderItem {
    uint32 menu_id = 1;
    uint32 qty = 2;
}

message RestaurantId {
    uint32 id = 1;
}

message DriverId {
    uint32 id = 1;
}

message UserId {
    uint32 id = 1;
}

message OrderId {
    uint32 id = 1;
}

message Orders {
    repeated Order orders = 1;
}

message Order {
    string object_id = 1;
    Restaurant restaurant = 2;
    OrderDetail order_detail = 3;
    User user = 4;
    Driver driver = 5;
    Payment payment = 6;
}

message Driver {
    uint32 id = 1;
    string name = 2;
}

message User {
    uint32 id = 1;
    string name = 2;
    Address address = 3;
}

message Address {
    float latitude = 1;
    float longitude = 2;
}

message Restaurant {
    uint32 id = 1;
    uint32 admin_id = 2;
    string name = 3;
    Address address = 4;
    string status = 5;
}

message Menu {
    uint32 id = 1;
    uint32 quantity = 2;
    float subtotal = 3;
}

message OrderDetail {
    repeated Menu menu = 1;
    float total = 2;
}

message Payment {
    uint32 id = 1;
    string invoice_id = 2;
    float total = 3;
    string method = 4;
    string status = 5;
}
